[gd_scene load_steps=3 format=3 uid="uid://drnqyiwnpts7k"]

[ext_resource type="Script" path="res://menu.gd" id="1_08rkx"]
[ext_resource type="Texture2D" path="res://asset/Game Title.png" id="2_wbypc"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_08rkx")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -50.5
offset_right = 31.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="StartB" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Start"

[node name="OptionB" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Option"

[node name="QuitB" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Quit"

[node name="GameTitle" type="Sprite2D" parent="."]
position = Vector2(577, 224)
texture = ExtResource("2_wbypc")

[connection signal="pressed" from="VBoxContainer/StartB" to="." method="_on_start_b_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionB" to="." method="_on_option_b_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitB" to="." method="_on_quit_b_pressed"]
